cleaned up code

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,9 @@ body {
   background-size: cover;
 }
 
+html {
+  height: 100%;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
